styles.css
/* ... */
/*Mobile*/
@media (max-width: 600px){
	.col-12-sml {
		width: 100%;
	}

	h1 {
		font-size: 48px;
	}

	h2 {
		font-size: 40px;
	}

	h3 {
		font-size: 32px;
	}

	.project-details, .skills {
		row-gap: var(--spacing-s);
	}

	.project-details h4 {
		padding-bottom: 8px;
	}

	.success-icon {
		grid-template-columns: repeat(1, 1fr);
		row-gap: var(--spacing-xxs);
		padding-bottom: 0;
	}

	.line {
		width: 30px;
		height: 2px;
		background: var(--black);
		margin: var(--spacing-xxs) 0;
		transition: all 0.25s ease-in;
	}

	.navigation {
	    border-bottom: none;
	}

	.navigation .wrapper {
		padding: 0;
	}

	nav {
		position: fixed;
		width: 100%;
		background: none;
		border: none;
		z-index: 2;
		pointer-events: none;
	}

	.hamburger {
		position: absolute;
		cursor: pointer;
		right: var(--spacing-s);
		z-index: 3;
		margin-top: var(--spacing-xs);
		pointer-events: auto;
	}

	.hamburger.open .line:nth-child(1) {
	    transform: translateY(10px) rotate(45deg);
	}

	.hamburger.open .line:nth-child(2) {
	    opacity: 0;
	}

	.hamburger.open .line:nth-child(3) {
	    transform: translateY(-10px) rotate(-45deg);
	}

	.nav-links {
		position: fixed;
		background: var(--white);
		height: 100vh;
		width: 100%;
		flex-direction: column;
		clip-path: circle(100px at 114% -14%);
		-webkit-clip-path: circle(100px at 114% -14%);
		transition: all 0.6s ease-in-out;
		pointer-events: none;
		padding-top: 70px;
	}

	.nav-links.open {
		clip-path: circle(1800px at 90% -10%);
		-webkit-clip-path: circle(1800px at 90% -10%);
		pointer-events: all;
	}

	.cta {
		display: none;
	}

	.logo {
		position: absolute;
		top: var(--spacing-xs);
		left: var(--spacing-s);
		border: none;
	}

	.nav-links li {
		padding: var(--spacing-s) var(--spacing-s);
		width: 100%;
		border-top: 1px solid rgba(0,0,0,0.1);
		animation: fade-in 1000ms ease forwards, slide-in-right 1000ms ease forwards;
	    opacity: 0;
	}

	.nav-links li:first-child {
		border: none;
	}

	.nav-links li a {
		padding-left: 24px;
	}

	.nav-links li:nth-child(1) {
		animation-delay: calc((0 * 70ms) + 900ms);
	}

	.nav-links li:nth-child(2) {
		animation-delay: calc((1 * 70ms) + 900ms);
	}

	.nav-links li:nth-child(3) {
		animation-delay: calc((2 * 70ms) + 900ms);
	}

	.nav-links li:nth-child(4) {
		animation-delay: calc((3 * 70ms) + 900ms);
	}

	nav li:first-child {
		padding-left: var(--spacing-s);
	}

	nav li:last-child {
		border-bottom: 1px solid rgba(0,0,0,0.1);
	}

	nav li a:after {
		display: none;
	}

	.hero {
		padding: 144px 0 120px 0;
	}

	.hero .project-title p {
		margin-bottom: var(--spacing-l);
	}

	.project-container .hero {
		padding: 144px 0 0 0;
	}

	.status {
		height: auto;
	}

	.status h2 {
		padding: var(--spacing-l) var(--spacing-m);
	}

	.what-i-do h2 {
		padding-bottom: var(--spacing-l);
	}

	.success-metrics {
		padding-bottom: var(--spacing-xs);
	}

	.smaller-p {
		padding: var(--spacing-xl) 0 var(--spacing-s) 0;
	}

	.footer {
		height: auto;
		padding: calc(var(--spacing-xl)*2) 0 var(--spacing-l) 0;
	}

	.no-metrics {
		padding: 0;
	}

@keyframes fade-in {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

@keyframes slide-in-right {
  from {
    transform: translate(-15px, 0);
  }

  to {
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
    transform: translate(0, 0);
  }
}

/*Variable Media Queries*/

	:root {
	--spacing-m: 24px;
	--spacing-l: 32px;
	--spacing-xl: 48px;
}

}

/*Mobile First Media Queries*/

@media (min-width: 375px){
/*	.projects {
		margin: 0 auto;
	}*/
}

@media (min-width: 600px){
	.projects, .project-details, .skills {
		grid-template-columns: repeat(2, 1fr);
	}
}

@media (min-width: 900px){
	.projects, .project-details {
		grid-template-columns: repeat(3, 1fr);
	}
	
	.skills {
		grid-template-columns: repeat(4, 1fr);
	}
}

